# libmotion

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .vscode-ctags  CMakeLists.txt  CMakePresets.json  libmotion.c
Homing/: CMakeLists.txt  Homing.cpp  Homing.hpp
LinearProfiles/: CMakeLists.txt  ConstantVelocity.cpp  ConstantVelocity.hpp  LinearProfile.cpp  LinearProfile.hpp  MotionStrategy.hpp
MotionManager/: CMakeLists.txt  MotionManager.cpp  MotionManager.hpp
Tests/: CMakeLists.txt  homing.csv  homing.vcd  ramp_down.csv  ramp_up.csv  rapidcsv.h  test.cpp  trapezoidal.csv  validation_data.csv  vcd_tracer.cpp  vcd_tracer.hpp  vcd_tracer.ipp
Tests/csv/: 01-simple.csv  02-fullrange.csv
TrapezoidalRamp/: CMakeLists.txt  TrapezoidalRamp.cpp  TrapezoidalRamp.hpp
VcdHAL/: VcdHAL.cpp
constant_velocity/: CMakeLists.txt  constant_velocity.c  constant_velocity.h
tests/: CMakeLists.txt  ramp_down.csv  ramp_up.csv  test.cpp  validation_data.csv
tests/csv/: 01-simple.csv  02-fullrange.csv
trapezoidal_ramp/: CMakeLists.txt  trapezoidal_ramp.c  trapezoidal_ramp.h
